feat: reminders over whatsapp. Fixes paginanted pets and products